# nPAF

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs
resources/: AppWindow.glade  MenuBar.glade  PersonEditor.glade  Root.glade  Toolbar.glade  Workspace.glade  resources.xml  style.css
src/: gedcom.rs  main.rs  person_editor.rs  root.rs
src/app/: mod.rs
src/gedcom/: gedex.rs  mod.rs
src/prelude/: mod.rs
