[package]
name = "n_paf"
version = "0.1.0"
edition = "2018"
authors = ["Iaroslav Sorokin <iaroslav.sorokin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.14.1" }
gio = ">=0.14.5"
glib = ">=0.14.5"
sqlite = "0.26.0"
# gedcom = "0.2.2"

[dependencies.gedcom]
path = "rust-gedcom"
